refactor: [#415] MCLauncher to be better generic and clearer Still hate it, needs more of a cleanup, but solves some issues